--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -3,7 +3,7 @@ he.mod.updateDate = 2025\u5E744\u670829\u65E5
 
 settings.helium = \u6C26\u914D\u7F6E
 settings.category.basic = \u57FA\u7840\u8BBE\u7F6E
-settings.category.keyBind = \u57FA\u7840\u8BBE\u7F6E
+settings.category.keyBind = \u952E\u4F4D\u7ED1\u5B9A
 settings.category.debug = \u8C03\u8BD5\u8BBE\u7F6E
 
 settings.basic.backBlur = \u80CC\u666F\u6A21\u7CCA
@@ -19,7 +19,6 @@ settings.item.enableRangeDisplay = \u542F\u7528\u8303\u56F4\u663E\u793A
 settings.item.showAttackRange = \u663E\u793A\u653B\u51FB\u8303\u56F4
 settings.item.showHealRange = \u663E\u793A\u4FEE\u590D\u8303\u56F4
 settings.item.showOverdriveRange = \u663E\u793A\u8D85\u901F\u6295\u5F71\u8303\u56F4
-settings.item.entityInfoHotKey = \u4FE1\u606F\u663E\u793A\u63A7\u5236\u70ED\u952E
 settings.item.entityInfoScale = \u4FE1\u606F\u663E\u793A\u7F29\u653E
 settings.item.entityInfoAlpha = \u4FE1\u606F\u6307\u793A\u5668\u900F\u660E\u5EA6
 
@@ -31,6 +30,13 @@ settings.item.enableBetterModsDialog = \u542F\u7528\u66F4\u597D\u7684\u6A21\u7EC
 
 settings.debug.logging = \u65E5\u5FD7\u4FE1\u606F
 settings.item.loadingInfo = \u8F93\u51FA\u52A0\u8F7D\u4FE1\u606F
+
+settings.keyBind.placement = \u653E\u7F6E\u9762\u677F
+settings.item.placementFoldHotKey = \u6298\u53E0/\u5C55\u5F00\u653E\u7F6E\u9762\u677F
+settings.item.switchFastPageHotKey = \u5FEB\u901F\u7269\u54C1\u680F\u7FFB\u9875
+
+settings.keyBind.entityInfo = \u5B9E\u4F53\u4FE1\u606F\u663E\u793A\u5668
+settings.item.entityInfoHotKey = \u4FE1\u606F\u663E\u793A\u63A7\u5236\u952E
 
 config.showAttackRange = \u663E\u793A\u653B\u51FB\u8303\u56F4
 config.showHealRange = \u663E\u793A\u4FEE\u590D\u8303\u56F4
@@ -96,6 +102,9 @@ dialog.mods.noFavorites = \u6CA1\u6709\u6536\u85CF\u4EFB\u4F55mod
 dialog.mods.mods = mod\u5217\u8868
 dialog.mods.openFolderFailed = \u65E0\u6CD5\u6253\u5F00\u76EE\u5F55
 dialog.mods.cantOpenOnAndroid = \u5728Android\u8BBE\u5907\u4E0A\u65E0\u6CD5\u6253\u5F00\u6587\u4EF6\u8DEF\u5F84\n\u4F60\u53EF\u4EE5\u590D\u5236\u5982\u4E0B\u8DEF\u5F84\u624B\u52A8\u5728\u6587\u4EF6\u7BA1\u7406\u5668\u4E2D\u6253\u5F00\uFF1A
+
+tools.tip.ctrlEntityInfo = \u9009\u62E9\u5E76\u663E\u793A\u5B9E\u4F53\u8BE6\u60C5
+tools.tip.configEntityInfo = \u5B9E\u4F53\u4FE1\u606F\u663E\u793A\u5668\u8BBE\u7F6E
 
 infos.relaunchEnsure = \u4E00\u4E9B\u914D\u7F6E\u9879\u7684\u53D8\u66F4\u9700\u8981\u91CD\u542F\u751F\u6548
 infos.confirmResetConfig = \u786E\u5B9A\u8981\u6062\u590D\u9ED8\u8BA4\u8BBE\u7F6E\u5417\uFF1F
